# imdb

./: .gitignore  README.md  after_poetry_install.sh  build-linux.yml  build-mac.yml  conda_setup.yml  create_conda_env.sh  pyproject.toml
imdb/: config.py
imdb/core/: data_loaders.py  metrics.py
imdb/data/sample/: cache.joblib
imdb/models/: base_model.py  models.py
imdb/scripts/: evaluate.py  predict.py  train.py
imdb/tests/unit/: test_metrics.py
notebooks/: 1_classical_NLP.ipynb  future_work.ipynb
reports/: 1_classical_NLP.html  future_work.html
src/: config.py  main.py
src/data/: load_data.py
