[tool.poetry]
name = "imdb"
version = "0.0.1"
authors = ["Marc Torrellas Socastro"]
description="A model to classify movie reviews"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.7.0"
certifi = "2019.11.28"

joblib = "^0.14.1"
pandas = "^0.25.3"
scikit-learn = "^0.22.1"
seaborn = "^0.9.0"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipykernel = "^5.1.3"
pytest = "^5.2"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
fs_train = 'src.scripts.main:train'
fs_predict = 'src.scripts.main:predict'